network/tools/network-policy-enforcement-latency/policy-creation-enforcement-latency/example-manifests/permissions.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-apiserver
  namespace: default
spec:
  podSelector:
    matchLabels:
      test: netpol-test
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 80
      protocol: TCP
    to:
    - ipBlock:
        # Use "kubectl get endpoints --namespace default kubernetes" to get the IP address of kube-apiserver.
        cidr: 4.249.144.116/32
