network/tools/network-policy-enforcement-latency/policy-creation-enforcement-latency/example-manifests/policy-allow-cilium-egress-to-target-pods.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-egress-to-target
spec:
  endpointSelector:
    matchLabels:
      test: netpol-test
  egress:
  - toEndpoints:
    - matchLabels:
        target: test-policy
        k8s:io.kubernetes.pod.namespace: test-policy
