network/tools/network-policy-enforcement-latency/policy-creation-enforcement-latency/example-manifests/policy-allow-egress-to-target-pods.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-target
  namespace: default
spec:
  podSelector:
    matchLabels:
      test: netpol-test
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          target: test-policy
          k8s:io.kubernetes.pod.namespace: test-policy
